--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -5,37 +5,13 @@
   <meta charset="UTF-8" />
 </head>
 <body>
+  <hiapl-script>
 
-    <hiapl-script>
+    <print>
+      <str>Hello, World!</str>
+    </print>  
 
-        <var name="count">
-          <int>0</int>
-        </var>
-
-        <loop>
-          <cond>
-            <not><eq>
-              <ref>count</ref>
-              <int>5</int>
-            </eq></not>
-          </cond>
-
-          <do>
-            <print-var>
-              <ref>count</ref>
-            </print-var>
-
-            <set-var var="count">
-              <sum>
-                <ref>count</ref>
-                <int>1</int>
-              </sum>
-            </set-var>
-          </do>
-        </loop>
-
-    </hiapl-script>
-
-    <script type="text/javascript", src="../src/hiapl.js"></script>
+  </hiapl-script>
+  <script type="text/javascript", src="../src/hiapl.js"></script>
 </body>
 </html>
